Create: media rules for hotel section

--- a/index.html
+++ b/index.html
@@ -122,26 +122,46 @@
         </div>
         <!-- /.hotel-info -->
         <div class="hotel-grid">
-          <div class="slider">
+          <div class="slider hotel__slider">
             <!-- Slider main container -->
             <div class="swiper-container">
               <!-- Additional required wrapper -->
               <div class="swiper-wrapper">
                 <!-- Slides -->
                 <div class="swiper-slide">
-                  <img src="img/slide-1.jpg" alt="" />
+                  <img
+                    class="swiper-slide__image"
+                    src="img/slide-1.jpg"
+                    alt=""
+                  />
                 </div>
                 <div class="swiper-slide">
-                  <img src="img/slide-2.jpg" alt="" />
+                  <img
+                    class="swiper-slide__image"
+                    src="img/slide-2.jpg"
+                    alt=""
+                  />
                 </div>
                 <div class="swiper-slide">
-                  <img src="img/slide-3.jpg" alt="" />
+                  <img
+                    class="swiper-slide__image"
+                    src="img/slide-3.jpg"
+                    alt=""
+                  />
                 </div>
                 <div class="swiper-slide">
-                  <img src="img/slide-4.jpg" alt="" />
+                  <img
+                    class="swiper-slide__image"
+                    src="img/slide-4.jpg"
+                    alt=""
+                  />
                 </div>
                 <div class="swiper-slide">
-                  <img src="img/slide-5.jpg" alt="" />
+                  <img
+                    class="swiper-slide__image"
+                    src="img/slide-5.jpg"
+                    alt=""
+                  />
                 </div>
               </div>
               <!-- If we need navigation buttons -->
@@ -195,7 +215,7 @@
             <div class="map">
               <iframe
                 src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d5530.018018736159!2d-74.91276923276351!3d38.9327157500916!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89bf5468189c7799%3A0xdfd964b40c0c8fc5!2z0JPRgNCw0L3QtCDQpdC-0YLQtdC7INC-0YQg0JrQtdC50L8t0JzQtdC5!5e0!3m2!1sru!2spl!4v1600990707751!5m2!1sru!2spl"
-                width="347"
+                width="100%"
                 height="213"
                 frameborder="0"
                 style="border: 0"
