--- a/thankyou.html
+++ b/thankyou.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="css/swiper-bundle.min.css" />
     <link rel="stylesheet" href="css/style.css" />
   </head>
+
   <body>
     <header class="navbar navbar--mobile_fixed">
       <div class="container">
@@ -131,284 +132,16 @@
         <div class="hotel-info">
           <div class="hotel-info__text">
             <div class="hotel-wrapper">
-              <div class="stars">
-                <img src="img/star.svg" alt="star" />
-                <img src="img/star.svg" alt="star" />
-                <img src="img/star.svg" alt="star" />
-                <img src="img/star.svg" alt="star" />
-                <img src="img/star.svg" alt="star" />
-              </div>
-              <h1 class="hotel-name hotel-info__name">Grand Hilton Hotel</h1>
-              <span class="offer hotel-info__offer">Flash Offer</span>
+              <h1 class="hotel-name hotel-info__name">Сообщение отправлено!</h1>
             </div>
             <p class="hotel-description hotel-info__description">
-              Half-Board/ All Inclusive + Complimentary Activities + Child Stays
-              Free
+              Наш менеджер позвонит вам через 5 минут.
             </p>
-          </div>
-          <div class="rating hotel-info__rating">
-            <span class="rating__text">User rattings</span>
-            <span class="rating__counter">4.5/5</span>
           </div>
         </div>
         <!-- /.hotel-info -->
-        <div class="hotel-grid">
-          <!-- Slider main container -->
-          <div class="swiper-container hotel-slider hotel__slider">
-            <!-- Additional required wrapper -->
-            <div class="swiper-wrapper">
-              <!-- Slides -->
-              <div class="swiper-slide hotel-slider__item">
-                <img class="hotel-slider__image" src="img/slide-1.jpg" alt="" />
-              </div>
-              <div class="swiper-slide hotel-slider__item">
-                <img class="hotel-slider__image" src="img/slide-2.jpg" alt="" />
-              </div>
-              <div class="swiper-slide hotel-slider__item">
-                <img class="hotel-slider__image" src="img/slide-3.jpg" alt="" />
-              </div>
-              <div class="swiper-slide hotel-slider__item">
-                <img class="hotel-slider__image" src="img/slide-4.jpg" alt="" />
-              </div>
-              <div class="swiper-slide hotel-slider__item">
-                <img class="hotel-slider__image" src="img/slide-5.jpg" alt="" />
-              </div>
-            </div>
-            <!-- If we need navigation buttons -->
-            <button
-              class="hotel-slider__button hotel-slider__button--prev"
-            ></button>
-            <button
-              class="hotel-slider__button hotel-slider__button--next"
-            ></button>
-          </div>
-          <!--/.swiper-container-->
-          <div class="hotel-right">
-            <!-- /.slider -->
-            <div class="booking">
-              <div class="booking__info">
-                <div class="booking__price">
-                  <span class="booking__start">price starts as</span>
-                  <strong class="booking__pricetag">$ 8.500</strong>
-                  <span class="booking__per-room">per room / night</span>
-                </div>
-                <!-- /.booking__price -->
-                <div class="booking__room">
-                  <div class="booking__text">
-                    <img
-                      src="img/user.svg"
-                      alt="Icon: user"
-                      class="booking__icon"
-                    />
-                    <span class="booking__description">2 x Guests</span>
-                  </div>
-                  <div class="booking__text">
-                    <img
-                      src="img/home.svg"
-                      alt="Icon: home"
-                      class="booking__icon"
-                    />
-                    <span class="booking__description">1 x Room</span>
-                  </div>
-                </div>
-                <!-- /.person-room -->
-              </div>
-              <!-- /.booking__info -->
-              <div class="booking__call-center">
-                <span class="booking__heading">Quick Booking</span>
-                <a class="booking__number" href="tel:12100">
-                  <img src="img/phone-call.svg" alt="Icon: phone" />
-                  <span class="booking__num">12100</span>
-                </a>
-              </div>
-              <!-- /.call-center -->
-              <button class="button booking__button">View Other Options</button>
-            </div>
-            <!-- /.booking -->
-            <div class="map">
-              <iframe
-                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d5530.018018736159!2d-74.91276923276351!3d38.9327157500916!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89bf5468189c7799%3A0xdfd964b40c0c8fc5!2z0JPRgNCw0L3QtCDQpdC-0YLQtdC7INC-0YQg0JrQtdC50L8t0JzQtdC5!5e0!3m2!1sru!2spl!4v1600990707751!5m2!1sru!2spl"
-                width="100%"
-                height="213"
-                frameborder="0"
-                style="border: 0"
-                allowfullscreen=""
-                aria-hidden="false"
-                tabindex="0"
-              ></iframe>
-            </div>
-            <!-- /.map -->
-          </div>
-        </div>
-        <!-- /.hotel-grid -->
       </div>
       <!-- /.container -->
-    </section>
-    <div
-      class="parallax-window"
-      data-parallax="scroll"
-      data-image-src="img/newsletter-bg.jpeg"
-    >
-      <section class="newsletter">
-        <div class="newsletter-wrapper">
-          <h2 class="newsletter-title newsletter__title">
-            subscribe to our
-            <span class="newsletter-title__strong">Newsletter</span>
-          </h2>
-          <form action="#" class="subscribe newsletter__subscribe">
-            <input
-              type="text"
-              class="subscribe__input"
-              placeholder="Your email address"
-            />
-            <button class="subscribe__button">Send</button>
-          </form>
-          <!-- /.newsletter-title -->
-        </div>
-        <!-- /.newsletter-wrapper -->
-      </section>
-    </div>
-    <!-- /.newsletter -->
-    <section class="reviews">
-      <div class="container">
-        <h2 class="reviews__title">What people think about us</h2>
-        <div class="swiper-container reviews-slider">
-          <div class="swiper-wrapper">
-            <div class="swiper-slide">
-              <div class="reviews-slider__item">
-                <div class="reviews-slider__profile">
-                  <img
-                    src="img/reviews-avatar.jpeg"
-                    alt="Photo: Megan Fox"
-                    class="reviews-slider__avatar"
-                  />
-                  <h3 class="reviews-slider__username">Megan Fox</h3>
-                  <span class="reviews-slider__date">Stayed 18 Nov, 2019</span>
-                  <div class="reviews-slider__rating">
-                    <img src="img/star.svg" alt="star" />
-                    <img src="img/star.svg" alt="star" />
-                    <img src="img/star.svg" alt="star" />
-                    <img src="img/star.svg" alt="star" />
-                    <img src="img/star.svg" alt="star" />
-                  </div>
-                  <!--/.rating-->
-                </div>
-                <!-- /.reviews-slider__profile -->
-                <p class="reviews-slider__text">
-                  It was very nice hotel with cleanliness. Staff behavior was
-                  good and polite. They welcome us very well. Issue was only
-                  that Lift was not in working and we were allotted to 3rd floor
-                  and amenities articles were in corner of gallery which were
-                  giving bad feeling. Breakfast was good and support of the
-                  staff was also very nice. Location is not good as per
-                  atmosphere, it is very nearby most of the popular places but
-                  self location in a narrow street is not good. Overall it was a
-                  good experience and could recommend.
-                </p>
-              </div>
-              <!-- /.reviews-slider__item -->
-            </div>
-            <div class="swiper-slide">
-              <div class="reviews-slider__item">
-                <div class="reviews-slider__profile">
-                  <img
-                    src="img/reviews-avatar2.jpeg"
-                    alt="Photo: Megan Fox"
-                    class="reviews-slider__avatar"
-                  />
-                  <h3 class="reviews-slider__username">Olivia Johnson</h3>
-                  <span class="reviews-slider__date">Stayed 5 Dec, 2019</span>
-                  <div class="reviews-slider__rating">
-                    <img src="img/star.svg" alt="star" />
-                    <img src="img/star.svg" alt="star" />
-                    <img src="img/star.svg" alt="star" />
-                    <img src="img/star.svg" alt="star" />
-                    <img src="img/star.svg" alt="star" />
-                  </div>
-                  <!--/.rating-->
-                </div>
-                <!-- /.reviews-slider__profile -->
-                <p class="reviews-slider__text">
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae
-                  sit dolorum perspiciatis nulla vero laboriosam. Dolore facere
-                  ab iusto officiis nulla odio rem, nobis ducimus! Porro culpa
-                  assumenda quae voluptates. Lorem ipsum dolor sit amet,
-                  consectetur adipisicing elit. Corporis quibusdam nesciunt
-                  aliquam facilis aut ea ipsa sunt officia asperiores beatae
-                  pariatur tenetur, eligendi, consequatur iusto voluptates
-                  doloremque deleniti magni. Asperiores.
-                </p>
-              </div>
-              <!-- /.reviews-slider__item -->
-            </div>
-          </div>
-          <!--swiper-wrapper-->
-          <button
-            class="reviews-slider__button reviews-slider__button--prev"
-          ></button>
-          <button
-            class="reviews-slider__button reviews-slider__button--next"
-          ></button>
-        </div>
-        <!--/.reviews-slider-->
-      </div>
-      <!--/.container-->
-    </section>
-    <section class="activities">
-      <div class="container">
-        <h2 class="activities__title">Other Activities</h2>
-        <div class="activities-wrapper">
-          <div class="card activities__card">
-            <img
-              src="img/activity-1.jpg"
-              alt="The curious corner of chamarel"
-              class="card__image"
-            />
-            <h3 class="card__title">The curious corner of chamarel</h3>
-            <!-- /.card__title -->
-            <button class="card__button">Book Now</button>
-            <!-- /.card__button -->
-          </div>
-          <!-- /.card -->
-          <div class="card activities__card">
-            <img
-              src="img/activity-2.jpg"
-              alt="Gymkhana club golf course"
-              class="card__image"
-            />
-            <h3 class="card__title">Gymkhana club golf course</h3>
-            <!-- /.card__title -->
-            <button class="card__button">Book Now</button>
-            <!-- /.card__button -->
-          </div>
-          <!-- /.card -->
-          <div class="card activities__card">
-            <img
-              src="img/activity-3.jpg"
-              alt="Tamarind falls hiking trip - full day"
-              class="card__image"
-            />
-            <h3 class="card__title">Tamarind falls hiking trip - full day</h3>
-            <!-- /.card__title -->
-            <button class="card__button">Book Now</button>
-            <!-- /.card__button -->
-          </div>
-          <!-- /.card -->
-          <div class="card activities__card">
-            <img
-              src="img/activity-4.jpg"
-              alt="The blue marine discovery quest"
-              class="card__image"
-            />
-            <h3 class="card__title">The blue marine discovery quest</h3>
-            <!-- /.card__title -->
-            <button class="card__button">Book Now</button>
-            <!-- /.card__button -->
-          </div>
-          <!-- /.card -->
-        </div>
-        <!-- /.activities-wrapper -->
-      </div>
     </section>
     <footer class="footer">
       <div class="container">
