--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
     <div
       class="parallax-window"
       data-parallax="scroll"
-      data-image-src="img/newsletter-bg.jpeg"
+      data-image-src="img/newsletter-bg.jpg"
     >
       <section class="newsletter">
         <div class="newsletter-wrapper">
@@ -316,8 +316,8 @@
               <div class="reviews-slider__item">
                 <div class="reviews-slider__profile">
                   <img
-                    src="img/reviews-avatar2.jpeg"
-                    alt="Photo: Megan Fox"
+                    src="img/reviews-avatar2.jpg"
+                    alt="Photo: Olivia Johnson"
                     class="reviews-slider__avatar"
                   />
                   <h3 class="reviews-slider__username">Olivia Johnson</h3>
