--- a/index.html
+++ b/index.html
@@ -231,6 +231,7 @@
             <!-- /.booking -->
             <div class="map">
               <iframe
+                class="map__frame"
                 src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d5530.018018736159!2d-74.91276923276351!3d38.9327157500916!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89bf5468189c7799%3A0xdfd964b40c0c8fc5!2z0JPRgNCw0L3QtCDQpdC-0YLQtdC7INC-0YQg0JrQtdC50L8t0JzQtdC5!5e0!3m2!1sru!2spl!4v1600990707751!5m2!1sru!2spl"
                 width="100%"
                 height="213"
@@ -600,26 +601,29 @@
           <!--/.footer__contact-details-->
           <div class="footer__contact-form">
             <h3 class="footer__title">SEND US A MESSAGE</h3>
-            <form action="send.php" method="POST" class="footer__form">
-              <input
-                type="text"
-                class="input footer__input"
-                placeholder="Your Full Name*"
-                name="name"
-                required
-              />
-              <input
-                type="text"
-                class="input footer__input"
-                placeholder="Phone Number*"
-                name="phone"
-                required
-              />
+            <form action="send.php" method="POST" class="footer__form form">
+              <div class="footer__input-group">
+                <input
+                  type="text"
+                  class="input footer__input"
+                  placeholder="Your Full Name*"
+                  name="name"
+                  required
+                />
+              </div>
+              <div class="footer__input-group">
+                <input
+                  type="tel"
+                  class="input footer__input"
+                  placeholder="Phone Number*"
+                  name="phone"
+                  required
+                />
+              </div>
               <textarea
                 class="message footer__message"
                 placeholder="Message"
                 name="message"
-                required
               ></textarea>
               <button class="button footer__button" type="submit">Send</button>
               <span class="footer__info">* Required Fields</span>
@@ -640,7 +644,7 @@
           <img src="img/close.svg" alt="Icon: close" />
         </a>
         <h3 class="modal__title">Booking</h3>
-        <form action="send.php" method="POST" class="modal__form">
+        <form action="send.php" method="POST" class="modal__form form">
           <input
             type="text"
             class="input modal__input"
@@ -649,14 +653,14 @@
             required
           />
           <input
-            type="text"
+            type="tel"
             class="input modal__input"
             placeholder="Phone Number*"
             name="phone"
             required
           />
           <input
-            type="text"
+            type="email"
             class="input modal__input"
             placeholder="Email*"
             name="email"
@@ -666,7 +670,6 @@
             class="message modal__message"
             placeholder="Message"
             name="message"
-            required
           ></textarea>
           <button class="button modal__button" type="submit">Send</button>
           <span class="modal__info">* Required Fields</span>
@@ -676,10 +679,10 @@
     </div>
     <!-- /.modal -->
     <script src="js/jquery-3.5.1.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+    <script src="js/jquery.validate.min.js"></script>
     <script src="js/swiper-bundle.min.js"></script>
     <script src="js/parallax.js-1.5.0/parallax.min.js"></script>
-    <script src="js/jquery.validate.min.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
     <script src="js/aos.js"></script>
     <script src="js/main.js"></script>
   </body>
